--- a/src/Components/Slide/Slide.css
+++ b/src/Components/Slide/Slide.css
@@ -1,3 +1,5 @@
+
+
 li{
     list-style-type: none;
 }
@@ -10,14 +12,14 @@ li{
     right: 0;
     width: 75%;
     height: auto;
-    color: #000000;
-        display: flex;
+  
+    display: flex;
     flex-direction: column;
     align-items: center;
     transition: opacity 0.5s ease-in-out;
     opacity:" hovered === index ? 1 :0";
     background: #e4e1e1;
-        box-sizing: border-box;
+    box-sizing: border-box;
     padding: 10px 10px;  
     border-radius: 10px;
     padding-bottom: 100px;
@@ -30,3 +32,38 @@ li{
      border-radius: 5px;
   border: none;
  }
+
+
+ .playvideo-section {
+    color: #ffffff;
+  }
+  
+  .play-video p,
+  .show-details h2,
+  .show-details p,
+  .show-info p {
+    font-size: 1.2rem;
+  }
+  
+  .show-details {
+    margin-left: 22px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  
+  .divider {
+    width: 73%;
+    margin: 3px 0 0 28px;
+    color: #616060;
+    position: absolute;
+  }
+  
+  .show-info {
+    margin-left: 22px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 70%;
+  }
+  
