--- a/src/Components/Css/index.css
+++ b/src/Components/Css/index.css
@@ -19,8 +19,8 @@
     text-align: center;
     background-image: url("https://media4.giphy.com/media/l41m3TD0Z8yk1wafC/200.webp?cid=ecf05e475w35bvexxf8k0pvqazbrrncobjzvr3t20ed63j2s&ep=v1_gifs_search&rid=200.webp&ct=g");
     background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
+    background-clip: text;  /* Clip background to text */
+    -webkit-background-clip: text; /* ensures compatibility with most browsers */
     color: transparent;
 }
 
@@ -33,15 +33,15 @@
     background-image: linear-gradient(90deg, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
     background-size: cover;
     background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+   -webkit-background-clip: text;   /*Clips the background so it only fills the text. */
+    color: transparent; 
 }
 
 
 .p-6 {
     font-family: 'Raleway', sans-serif;
     background-clip: border-box;
-    /*   border-box: The border-box property is used to set the background color spread over the whole division. */
+                                          /*   border-box: The border-box property is used to set the background color spread over the whole division. */
     border: 4px dashed #999;
     padding: 45px;
     background-color: cadetblue;
@@ -50,7 +50,7 @@
 .p-7 {
     font-family: 'Raleway', sans-serif;
     background-clip: padding-box;
-    /* padding-box: The padding-box property is used to set the background inside the border. */
+                                   /* padding-box: The padding-box property is used to set the background inside the border. */
     border: 4px dashed #999;
     padding: 15px;
     background-color: cadetblue;
@@ -59,7 +59,7 @@
 .p-8 {
     font-family: 'Raleway', sans-serif;
     background-clip: content-box;
-    /* The content-box property is used to set the background color up to the content only. */
+                                     /* The content-box property is used to set the background color up to the content only. */
     border: 4px dashed #999;
     padding: 85px;
     background-color: cadetblue;
@@ -74,8 +74,8 @@
     font-size: 5em;
     padding: 15px;
     text-align: center;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR23hVJDRwORZETPdBEX3aXkWXKwAW2wmWDlg&s");
-    background-repeat: no-repeat;
+    /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR23hVJDRwORZETPdBEX3aXkWXKwAW2wmWDlg&s"); */
+    background-repeat: repeat;
     background-size: cover;
     background-color: #cccccc;
     background-position: center;
@@ -87,5 +87,5 @@
 .p-5 {
     padding: 15px;
     font-size: 2em;
-    background-color: hsl(89, 43%, 51%);
+    background-color: #b7ee7d;
 }
